# em_tactile_sim

./: .gitignore  README.md  README_CN.md  pyproject.toml
docs/: simulation_guide.md
docs/superpowers/plans/: 2026-03-27-isaac-sim-integration.md
docs/superpowers/specs/: 2026-03-27-isaac-sim-integration-design.md
em_tactile_sim/core/: contact_model.py  hall_response.py  sensor_config.py
em_tactile_sim/isaac/: __init__.py  _compat.py  contact_source.py  env.py  extension.py  sensor_bridge.py
em_tactile_sim/isaac/models/: em_sensor_flat.usda
em_tactile_sim/mujoco/: callback.py  env.py
em_tactile_sim/mujoco/models/: em_sensor_custom1.xml  em_sensor_flat.xml  em_sensor_flat_with_sites.xml  em_sensor_rolling.xml  gen_sites.py
em_tactile_sim/utils/: __init__.py  recorder.py
examples/: flat_press_test.py  interactive_dashboard.py  isaac_press_test.py  timeseries_plot.py  visualize_array.py
examples/output/: sensor_timeseries.csv
tests/: test_contact_model.py  test_hall_response.py  test_integration.py  test_isaac_integration.py  test_isaac_sensor_bridge.py  test_recorder.py  test_sensor_config.py
