[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "em-tactile-sim"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.0.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
calibration = [
    "torch>=2.0",
    "scipy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["em_tactile_sim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:ament_copyright -p no:ament_flake8 -p no:ament_pep257 -p no:ament_xmllint -p no:ament_lint -p no:launch_testing -p no:launch_testing_ros -p no:launch_ros"
